--- a/plugins/xmlnodestore/todo.txt
+++ b/plugins/xmlnodestore/todo.txt
@@ -1,7 +1,4 @@
-memory management:
-- increase node pool size by e.g. 10k nodes if necessary
-- 
-support generic hashing of UA_NodeId (currently only String supported)
+setup tests
 implement extract attributes
 implement nodestore interface (currently only get)
 cleanup memory after loading
@@ -9,6 +6,9 @@ hashtable to reduce duplicate strings
 support loading of extensions
 loading of datatypes
 loading of values
+memory management:
+- provide statistics
+refactor hashtable for nodes
 
 
 
