--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+Dummy change
+
 This changelog reports changes visible through the public API. Internal refactorings and bug
 fixes are not reported here.
 
